<resources>
    <string name="app_name">Music Player</string>
    <string name="my_music">My Music</string>
    <string name="album">Album</string>
    <string name="favourite">Favourite</string>
    <string name="spotify">Spotify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_music_title">My Music</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="_45_minutes">45 Minutes</string>
    <string name="_60_minutes">60 Minutes</string>
    <string name="song_name">Song Name</string>
    <string name="favourites">Favourites</string>
    <string name="playlist_name">PlayList Name</string>
    <string name="delete_button">delete_button</string>
    <string name="song_image">song_image</string>
    <string name="playlists">PlayLists</string>
    <string name="add">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="sea">Search</string>


</resources>