<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    android:layout_margin="10dp"
    android:backgroundTint="@color/black"
    app:strokeColor="@color/skyBlue">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImagePL"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:src="@drawable/music_icon"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@drawable/curved"
        android:contentDescription="@string/song_image"/>

    <TextView
        android:id="@+id/songNamePL"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/playlist_name"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_marginTop="130dp"
        tools:ignore="SmallSp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"/>

    <ImageButton
        android:id="@+id/deleteBtnPL"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/delete"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="130dp"
        android:layout_marginStart="130dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/delete_button"/>



</com.google.android.material.card.MaterialCardView>