<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/min15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/stopwtch"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_15_minutes"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/min30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/stopwtch"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_30_minutes"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/min45"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/stopwtch"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_45_minutes"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/min60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/stopwtch"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_60_minutes"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="8dp"/>

    </LinearLayout>

</LinearLayout>